# mage

./: Dockerfile  Dockerfile.no_ML  README.md
cpp/: CMakeLists.txt
cpp/biconnected_components_module/: biconnected_components_module.cpp
cpp/bipartite_matching_module/: bipartite_matching_module.cpp
cpp/bridges_module/: bridges_module.cpp
cpp/connectivity_module/: connectivity_module.cpp
cpp/cycles_module/algorithm/: cycles.cpp
cpp/degree_centrality_module/: degree_centrality_module.cpp
cpp/katz_centrality_module/algorithm/: katz.hpp
cpp/path_module/algorithm/: path.cpp
cpp/shortest_paths_module/: CMakeLists.txt  shortest_paths_module.cpp  shortest_paths_module_test.cpp
cpp/shortest_paths_module/algorithm/: bellman_ford.hpp  cycles.hpp  dijkstra.cpp  dijkstra.hpp  disjoint.hpp  iterative_bf.hpp  johnsons.hpp  optimize.hpp  path.hpp  polyedge.hpp  procedures.hpp  shortest_path.hpp  successive_shortest_paths.hpp  yens.cpp  yens.hpp
cpp/shortest_paths_module/util/: conversions.cpp  conversions.hpp  map.cpp  map.hpp  options.cpp  options.hpp
cpp/yens_ksp_module/: CMakeLists.txt  yens_ksp_module.cpp  yens_ksp_module_test.cpp
cpp/yens_ksp_module/algorithm/: dijkstra.cpp  path.hpp  shortest_path.hpp  yens.cpp  yens.hpp
e2e/shortest_paths_test/test_bf_small_neg_cycle/: input.cyp  test.yml
e2e/shortest_paths_test/test_bf_small_pos_cycle/: test.yml
e2e/shortest_paths_test/test_iter_bf_small_neg_cycle/: input.cyp  test.yml
e2e/shortest_paths_test/test_johnsons_small_cyclic/: input.cyp  test.yml
e2e/shortest_paths_test/test_parallel_edges/: test.yml
e2e/shortest_paths_test/test_small_acyclic/: test.yml
e2e/shortest_paths_test/test_small_cyclic/: test.yml
e2e/shortest_paths_test/test_ssp_conv_source_over_target/: input.cyp  test.yml
e2e/shortest_paths_test/test_ssp_conv_target_over_source/: test.yml
e2e/shortest_paths_test/test_ssp_noconv/: input.cyp  test.yml
e2e/shortest_paths_test/test_unweighted/: test.yml
e2e/shortest_paths_test/test_yens_parallel_edges/: test.yml
e2e/shortest_paths_test/test_yens_small_acyclic/: input.cyp  test.yml
e2e/shortest_paths_test/test_yens_small_cyclic/: input.cyp
e2e/yens_ksp_test/test_parallel_edges/: input.cyp  test.yml
e2e/yens_ksp_test/test_small_acyclic/: test.yml
e2e/yens_ksp_test/test_small_cyclic/: test.yml
e2e/yens_ksp_test/test_unweighted/: input.cyp  test.yml
